--- a/src/views/index.html
+++ b/src/views/index.html
@@ -81,7 +81,7 @@
         <!-- https://vk.com/@vk_it-webp?t2fs=232db2370e4cfe3c00_3 -->
         <script src="js/import/modernizr-webp.js"></script>
         <script type="module" src="js/import/translate.js"></script>
-        <script type="module" src="js/import/reviews.js"></script>
+        <script type="module" src="js/import/swiper.js"></script>
         <script src="js/import/preloader.js"></script>
         <script defer src="js/main.js"></script>
     </body>
