--- a/src/scss/base/_settings.scss
+++ b/src/scss/base/_settings.scss
@@ -88,6 +88,39 @@ a {
         transform: translateX(0%) !important;
         transition: all 0.4s;
     }
+
+    .reasons-entry-left {
+        transform: translateX(0%) !important;
+        transition: all 0.4s;
+
+        &[data-delay="1"] {
+            transition-delay: 500ms;
+        }
+
+        &[data-delay="2"] {
+            transition-delay: 600ms;
+        }
+
+        &[data-delay="3"] {
+            transition-delay: 700ms;
+        }
+
+        &[data-delay="4"] {
+            transition-delay: 800ms;
+        }
+
+        &[data-delay="5"] {
+            transition-delay: 900ms;
+        }
+
+        &[data-delay="6"] {
+            transition-delay: 1000ms;
+        }
+
+        &[data-delay="7"] {
+            transition-delay: 1100ms;
+        }
+    }
 }
 
 .title-entry {
@@ -109,6 +142,18 @@ a {
 .portfolio-entry-right {
     transform: translateX(100%);
     transition: all 0.4s;
+}
+
+.reasons-entry-left {
+    transform: translateX(-100vw);
+    transition: all 0.2s;
+}
+
+@media (max-width: 700px) {
+    .reasons-entry-left {
+        transform: translateX(0%);
+        transition-delay: 0ms !important;
+    }
 }
 
 .container {
