FIX: massive fix

--- a/src/modules/nav/_nav.scss
+++ b/src/modules/nav/_nav.scss
@@ -7,9 +7,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-radius: 0 8px 8px 0;
+    border-radius: 0;
     padding: 31.5px 0 24px;
-    width: 100%;
+    width: 100vw;
     transform: translateY(-100%);
     transition: all 0.3s;
 
