--- a/src/modules/reasons/reasons.scss
+++ b/src/modules/reasons/reasons.scss
@@ -3,22 +3,14 @@
         display: flex;
         align-items: center;
         margin-bottom: 64px;
+
+        h2 {
+            margin-left: 14px;
+        }
     }
 
     &__highlighted {
         color: $violet;
-    }
-
-    &__sum {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-right: 14px;
-        border-radius: 8px;
-        padding: 19px 31px;
-        width: 90px;
-        height: 90px;
-        background-color: $violet;
     }
 
     &__grid {
@@ -78,6 +70,7 @@
 
         &__slider {
             display: block;
+            overflow-x: hidden;
 
             .swiper-pagination-bullet {
                 display: block;
@@ -125,12 +118,29 @@
     .reasons {
         &__title {
             align-items: flex-start;
+
+            h2 {
+                width: calc(100% - 70px);
+
+                br {
+                    display: none;
+                }
+            }
         }
 
         &__sum {
-            padding: 19px 26px;
-            width: 25%;
-            height: 50%;
+            width: 70px;
+            height: 70px;
+
+            svg {
+                width: 100%;
+                height: 100%;
+            }
+
+            rect {
+                width: 100%;
+                height: 100%;
+            }
         }
     }
 }
