--- a/src/modules/header/_header.scss
+++ b/src/modules/header/_header.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     overflow-x: hidden;
     overflow-y: hidden;
-    padding-left: $container-offset;
+    padding-right: 0;
     height: 100vh;
     max-width: 100vw;
     background-color: #1B0A35;
@@ -114,12 +114,8 @@
 }
 
 @media (max-width: 1125px) {
-    .header {
-        padding-left: 35px;
-
-        &__image img {
-            object-position: 38%;
-        }
+    .header__image img {
+        object-position: 38%;
     }
 }
 
@@ -155,7 +151,7 @@
             padding: 16px $container320-offset;
             width: 100%;
 
-            // nav height
+            // header height
             height: 100%;
 
             &-text {
@@ -164,6 +160,7 @@
         }
 
         &__bottom {
+            padding: 10px;
             background-color: rgba(0 0 0 / 50%);
         }
 
