--- a/src/modules/services/services.scss
+++ b/src/modules/services/services.scss
@@ -9,6 +9,10 @@
         h3 {
             margin-bottom: 16px;
         }
+
+        &[data-service="first"] {
+            margin-top: 0;
+        }
     }
 
     &__about {
@@ -79,10 +83,6 @@
                 cursor: pointer;
             }
         }
-    }
-
-    h2 {
-        margin-bottom: 48px;
     }
 }
 
