FIX: massive FIX2

--- a/src/modules/nav/_nav.scss
+++ b/src/modules/nav/_nav.scss
@@ -9,7 +9,7 @@
     justify-content: space-between;
     border-radius: 0;
     padding: 31.5px 0 24px;
-    width: 100%;
+    width: 100vw;
     transform: translateY(-100%);
     transition: all 0.3s;
 
