--- a/src/modules/popup/popup.scss
+++ b/src/modules/popup/popup.scss
@@ -51,6 +51,10 @@
         }
     }
 
+    &__certificate[data-item="last"] {
+        margin-bottom: 64px;
+    }
+
     &__text {
         margin-bottom: 12px;
     }
@@ -257,6 +261,14 @@
             padding: 35px;
         }
 
+        &__certificate[data-item="last"] {
+            margin-bottom: 35px;
+        }
+
+        &__item[data-item="last"] {
+            padding-bottom: 35px;
+        }
+
         &__certificate {
             padding: 0 48px;
         }
@@ -271,6 +283,14 @@
     .popup {
         &__content {
             padding: 16px 12px;
+        }
+
+        &__certificate[data-item="last"] {
+            margin-bottom: 16px;
+        }
+
+        &__item[data-item="last"] {
+            padding-bottom: 16px;
         }
 
         &__switcher {
