--- a/src/modules/about/_tabs.scss
+++ b/src/modules/about/_tabs.scss
@@ -1,7 +1,6 @@
 .tabs {
     position: relative;
     margin-top: 64px;
-    width: 960px;
 
     &Menu {
         display: none;
@@ -203,6 +202,7 @@
 
     &__content {
         display: block;
+        max-width: 960px;
     }
 }
 
@@ -211,7 +211,6 @@
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-between;
-        width: 100%;
 
         &__header {
             flex-direction: column;
